<resources>
    <string name="app_name" translatable="false">TopTapper</string>
    <string name="top_tapper" translatable="false">Top Tapper</string>
    <string name="colors" translatable="false">COLORS</string>
    <string name="choose_level">Choose level</string>
    <string name="newb">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    <string name="play">Play</string>
    <string name="leaderboards">Records table</string>
    <string name="profile_image">Profile avatar</string>
    <string name="select_an_avatar">Choose avatar</string>
    <string name="avatar">Avatar pool</string>
    <string name="define_user">User creation</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="define">Define</string>
    <string name="change_user">Change user</string>
    <string name="enter_name">Please enter a name</string>
    <string name="enter_password">Please enter  an password</string>
    <string name="user_defined">The user created successfully</string>
    <string name="continue_">Continue</string>
    <string name="sesion_end">Oops!\nIt looks like something slip threw your fingers, you can always try again</string>
    <string name="disqualify">Disqualified</string>
    <string name="try_again">Try again</string>
    <string name="no">No</string>
    <string name="defeat_best">"Defeat personal best: "</string>
    <string name="points">%d pts</string>
</resources>