<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/levelHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:background="@drawable/level_headling_bg"
        android:paddingBottom="5dp"
        tools:text="Beginner"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderboardRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/leadboard_item"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/beginnerRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newb"
            android:checked="true"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/intermediateRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/expertRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expert"
            android:textAlignment="viewStart"
            android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>