<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="368dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/top_tapper"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
        app:layout_constraintBottom_toTopOf="@+id/title_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="362dp"
        android:layout_height="225dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_tap"
        app:layout_constraintBottom_toTopOf="@+id/spacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_title" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@id/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_image" />

    <Button
        android:id="@+id/play_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintBottom_toTopOf="@id/changeUserBtn"/>



    <Button
        android:id="@+id/changeUserBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_user"
        app:layout_constraintTop_toBottomOf="@+id/play_btn"
        app:layout_constraintBottom_toTopOf="@+id/leaderboardBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leaderboardBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/leaderboards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeUserBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>