<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/define_user"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/avatar_text_label"/>

    <TextView
        android:id="@+id/avatar_text_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_an_avatar"
        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
        app:layout_constraintBottom_toTopOf="@+id/gridImages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.itaycohen.toptapper.ui.views.GridImagePicker
        android:id="@+id/gridImages"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        app:six_images="@array/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_text_label"
        app:layout_constraintBottom_toTopOf="@+id/spacer"/>

    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/gridImages"
        app:layout_constraintBottom_toTopOf="@id/usernameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintBottom_toTopOf="@id/spacer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/spacer2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/signupBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/define"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer2"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>